[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[metadata]
# Core
name = graphdj
version = 0.0.1
keywords = module django crud graphql graphene-django

# Author
author = 'hlop3z'
author_email = 'graphdj@googlegroups.com'

# LICENSE
license_file = LICENSE

# README
description = Easy CRUD with Graphene-Django
long_description = file: README.md
long_description_content_type = "text/markdown"

# Links
url = https://github.com/hlop3z/graphdj
#download_url = 'https://github.com/{username}/{project}/archive/v_01.tar.gz'
#project_urls =
    #Documentation = https://{project_docs}.com

classifiers =
    License :: OSI Approved :: BSD-3 License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Framework :: Django :: 3.2
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta

[options]
zip_safe = false
include_package_data = True
python_requires = >=3.9

# Package
packages = find:
package_dir =
    =src

# Requires
install_requires =
    Django >= 3.2
    graphene-django >= 3.0.0b7
    django-filter >= 2.4.0
    PyYAML >= 5.4.1


[options.packages.find]
where = src